--- a/cf-guarddutyrecruiter-batch.yml
+++ b/cf-guarddutyrecruiter-batch.yml
@@ -479,12 +479,20 @@ Resources:
                     ORGANIZATION_ACCOUNT = os.environ['ORGANIZATION_ACCOUNT']
                     STACKSET_NAME = os.environ['STACKSET_NAME']
                     STACKSET_REGION = os.environ['STACKSET_REGION']
-                    session = get_session(account=ORGANIZATION_ACCOUNT, role=ORGANIZATION_ROLE, externalId=ORGANIZATION_ROLE_EXTERNALID, session_name='guarddutyrecruiter_lambda')
-                    accountsList = getAllActiveAccounts(session)
-                    print("Found %s StackSet instances to update." % (len(accountsList)))
+                    session = get_session(account=ORGANIZATION_ACCOUNT, role=ORGANIZATION_ROLE, externalId=ORGANIZATION_ROLE_EXTERNALID, session_name=ORGANIZATION_ROLE+"_lambda")
+                    activeAccountsList = getAllActiveAccounts(session)
 
                     client = session.client('cloudformation')
-                    response = client.create_stack_instances(StackSetName=STACKSET_NAME,Accounts=accountsList,Regions=[STACKSET_REGION], OperationPreferences={'MaxConcurrentPercentage': 100} )
+                    ListStackInstances =  client.list_stack_instances(StackSetName=STACKSET_NAME,StackInstanceRegion=STACKSET_REGION)
+                    existingAccountsList = list([stackInstance['Account'] for stackInstance in ListStackInstances['Summaries']])
+                    accountsToCreateList = list(set(activeAccountsList) - set(existingAccountsList))
+                    accountsToCreateList = []
+                    if accountsToCreateList:
+                      print("Found %s StackSet instances to create : %s" % (len(accountsToCreateList), accountsToCreateList))
+                      response = client.create_stack_instances(StackSetName=STACKSET_NAME,Accounts=accountsToCreateList,Regions=[STACKSET_REGION], OperationPreferences={'MaxConcurrentPercentage': 100})
+                    else:
+                      print("No stack instance to create.")
+
 
                   def get_session(account=None, role=None, externalId=None, region=None, session_name='my_session'):
                       # If the role is given : assumes a role and returns boto3 session
