--- a/cf-guarddutyrecruiter-common.yml
+++ b/cf-guarddutyrecruiter-common.yml
@@ -27,6 +27,11 @@ Parameters:
     Type: String
     Default: guarddutyrecruiter
 
+  DaysToRetainUntaggedContainerImages:
+    Description: Days to retain untagged images
+    Type: String
+    Default: 1
+
 
 Resources:
 
@@ -41,6 +46,26 @@ Resources:
         Value: !Ref TagApp
       - Key: Org
         Value: !Ref TagOrg
+      LifecyclePolicy:
+        LifecyclePolicyText: !Sub
+          - |
+            {
+              "rules": [
+                {
+                  "rulePriority": 1,
+                  "description": "Only keep untagged images for ${DaysToRetainUntaggedContainerImages} days",
+                  "selection": {
+                    "tagStatus": "untagged",
+                    "countType": "sinceImagePushed",
+                    "countUnit": "days",
+                    "countNumber": ${DaysToRetainUntaggedContainerImages}
+                  },
+                  "action": { "type": "expire" }
+                }
+              ]
+            }
+          - DaysToRetainUntaggedContainerImages: !Ref DaysToRetainUntaggedContainerImages
+
 
 Outputs:
 
